// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delegate Step Wizard should be able to install in cluster delegate 1`] = `
<div>
  <div
    class="exampleWizard"
  >
    <div
      class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
    >
      <div
        class="StepWizard---navBarList--2ILN"
      >
        <div
          class="StepWizard---navStep--2trN StepWizard---completedStep--3BLy"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-green500--2_VK"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="22"
              viewBox="0 0 20 20"
              width="22"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps---font--2ipy Text---multiple--3ScU StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            Create a New Kubernetes Connector
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            2
          </span>
          <p
            class="StyledProps---font--2ipy Text---multiple--3ScU StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            New Kubernetes Connector
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            3
          </span>
          <p
            class="StyledProps---font--2ipy Text---multiple--3ScU StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            Verify Connection
          </p>
        </div>
      </div>
      <div
        class="StepWizard---stepDetails--Uaxx"
      >
        <div
          class="Layout---vertical--3Szv StyledProps---main--1Wws StyledProps---padding-small--3f0A"
        >
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0 StyledProps---padding-small--3f0A"
            style="font-weight: bold; padding: 0px;"
          >
            New Kubernetes Connector
          </p>
          <form
            action="#"
          >
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws formLayout"
            >
              <div
                class="Layout---vertical--3Szv Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws"
              >
                <label
                  class="Label---main--bHPE"
                >
                  Give your Kubernetes Connector a name
                </label>
                <div
                  class="TextInput---main--1ytZ"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      name="connectorname"
                      placeholder="My Kubernetes Connector 1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
              >
                <button
                  class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Back
                  </span>
                </button>
                <button
                  class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Save and Continue
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <button
      class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`Delegate Step Wizard should be able to install in cluster delegate 2`] = `
<div>
  <div
    class="exampleWizard"
  >
    <div
      class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
    >
      <div
        class="StepWizard---navBarList--2ILN"
      >
        <div
          class="StepWizard---navStep--2trN StepWizard---completedStep--3BLy"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-green500--2_VK"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="22"
              viewBox="0 0 20 20"
              width="22"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps---font--2ipy Text---multiple--3ScU StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            Create a New Kubernetes Connector
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            2
          </span>
          <p
            class="StyledProps---font--2ipy Text---multiple--3ScU StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            New Kubernetes Connector
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            3
          </span>
          <p
            class="StyledProps---font--2ipy Text---multiple--3ScU StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            Verify Connection
          </p>
        </div>
      </div>
      <div
        class="StepWizard---stepDetails--Uaxx"
      >
        <div
          class="Layout---vertical--3Szv StyledProps---main--1Wws StyledProps---padding-small--3f0A"
        >
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0 StyledProps---padding-small--3f0A"
            style="font-weight: bold; padding: 0px;"
          >
            New Kubernetes Connector
          </p>
          <form
            action="#"
          >
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws formLayout"
            >
              <div
                class="Layout---vertical--3Szv Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws"
              >
                <label
                  class="Label---main--bHPE"
                >
                  Give your Kubernetes Connector a name
                </label>
                <div
                  class="TextInput---main--1ytZ"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      name="connectorname"
                      placeholder="My Kubernetes Connector 1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
              >
                <button
                  class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Back
                  </span>
                </button>
                <button
                  class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Save and Continue
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <button
      class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`Delegate Step Wizard should be able to install in cluster delegate 3`] = `
<div>
  <div
    class="exampleWizard"
  >
    <div
      class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
    >
      <div
        class="StepWizard---navBarList--2ILN"
      >
        <div
          class="StepWizard---navStep--2trN StepWizard---completedStep--3BLy"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-green500--2_VK"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="22"
              viewBox="0 0 20 20"
              width="22"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps---font--2ipy Text---multiple--3ScU StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            Create a New Kubernetes Connector
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN StepWizard---completedStep--3BLy"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-green500--2_VK"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="22"
              viewBox="0 0 20 20"
              width="22"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps---font--2ipy Text---multiple--3ScU StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            New Kubernetes Connector
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            3
          </span>
          <p
            class="StyledProps---font--2ipy Text---multiple--3ScU StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            Verify Connection
          </p>
        </div>
      </div>
      <div
        class="StepWizard---stepDetails--Uaxx"
      >
        <div
          class="Layout---vertical--3Szv StyledProps---main--1Wws StyledProps---padding-small--3f0A"
        >
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0 StyledProps---padding-small--3f0A"
            style="padding: 0px;"
          >
            Verify Connection to 
            <span
              style="font-weight: 700;"
            />
          </p>
          <div
            class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws StepsProgress---stepsProgress--2IQh"
            id="steps-progress"
          >
            <div
              class="StepsProgress---progressBar--2_Dp"
            >
              <div
                class="bp3-progress-bar bp3-intent-warning bp3-no-stripes StepsProgress---progressHeight--3zU4"
              >
                <div
                  class="bp3-progress-meter"
                  style="width: 25%;"
                />
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
            >
              <div>
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52"
                  style="font-weight: bold; display: inline-flex; justify-content: center;"
                >
                  <span
                    class="bp3-icon StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04 StyledProps---color--8PuS StyledProps---color-yellow500--1TpH"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 128 128"
                      width="16"
                    >
                      <g>
                        <path
                          d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                          fill="#ff8e02"
                        />
                        <path
                          d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                          fill="#ffddb3"
                          fill-opacity="0.3"
                        />
                        <path
                          d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                          fill="#ffd29a"
                          fill-opacity="0.4"
                        />
                        <path
                          d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                          fill="#ffc680"
                          fill-opacity="0.5"
                        />
                        <path
                          d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                          fill="#ffbb67"
                          fill-opacity="0.6"
                        />
                        <path
                          d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                          fill="#ffb04d"
                          fill-opacity="0.7"
                        />
                        <path
                          d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                          fill="#ffa535"
                          fill-opacity="0.8"
                        />
                        <path
                          d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                          fill="#ff991b"
                          fill-opacity="0.9"
                        />
                        <animatetransform
                          attributeName="transform"
                          calcMode="discrete"
                          dur="1200ms"
                          repeatCount="indefinite"
                          type="rotate"
                          values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                        />
                      </g>
                    </svg>
                  </span>
                  Install Delegate
                </span>
              </div>
              <div>
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52"
                  style="font-weight: normal; display: inline-flex; justify-content: center;"
                >
                  <span
                    class="bp3-icon bp3-icon-blank StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04 StyledProps---color--8PuS StyledProps---color-yellow500--1TpH"
                    icon="blank"
                  >
                    <svg
                      data-icon="blank"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        blank
                      </desc>
                    </svg>
                  </span>
                  Establising Connection with the Delegate and Kubernetes
                </span>
              </div>
              <div>
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52"
                  style="font-weight: normal; display: inline-flex; justify-content: center;"
                >
                  <span
                    class="bp3-icon bp3-icon-blank StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04 StyledProps---color--8PuS StyledProps---color-yellow500--1TpH"
                    icon="blank"
                  >
                    <svg
                      data-icon="blank"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        blank
                      </desc>
                    </svg>
                  </span>
                  Checking for heartbeat
                </span>
              </div>
              <div>
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52"
                  style="font-weight: normal; display: inline-flex; justify-content: center;"
                >
                  <span
                    class="bp3-icon bp3-icon-blank StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04 StyledProps---color--8PuS StyledProps---color-yellow500--1TpH"
                    icon="blank"
                  >
                    <svg
                      data-icon="blank"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        blank
                      </desc>
                    </svg>
                  </span>
                  Verifying Connection
                </span>
              </div>
            </div>
          </div>
          <section
            class="stepsOverlay"
          >
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xxlarge--zgL2 StyledProps---main--1Wws"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0"
                style="padding: 0px; font-weight: 700;"
              >
                Install your Delegate
              </p>
              <div
                class="Layout---vertical--3Szv Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws"
              >
                <label
                  class="Label---main--bHPE"
                >
                  Supported Formats
                </label>
                <div
                  class="bp3-popover-wrapper Select---main--1QpB bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        placeholder="Search..."
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws StyledProps---padding-small--3f0A"
                          icon="caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              caret-down
                            </desc>
                            <path
                              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button bp3-large StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-bring-data StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
                  icon="bring-data"
                >
                  <svg
                    data-icon="bring-data"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      bring-data
                    </desc>
                    <path
                      d="M14 14a1 1 0 010 2H2a1 1 0 010-2h12zM7.995 3.005c.55 0 1 .45 1 .999v5.584l1.29-1.288a1.002 1.002 0 011.42 1.419l-3 2.996a1.015 1.015 0 01-1.42 0l-3-2.997A1.002 1.002 0 015.705 8.3l1.29 1.29V4.013c0-.55.45-1.009 1-1.009zM14 0a1 1 0 110 2 1 1 0 010-2zm-3 0a1 1 0 110 2 1 1 0 010-2zM8 0a1 1 0 110 2 1 1 0 010-2zM5 0a1 1 0 110 2 1 1 0 010-2zM2 0a1 1 0 110 2 1 1 0 010-2z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Download the Harness Delegate
                </span>
              </button>
              <div
                class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
              >
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  style="padding: 0px;"
                >
                  Run the following commands (ensure you have kubectl installed and credentials to access your Kubernetes Cluster):
                </p>
                <div
                  class="StyledProps---font--2ipy StyledProps---main--1Wws CodeBlock---codeBlock--10b_ StyledProps---padding-xsmall---5eB StyledProps---background-grey100--2FyT StyledProps---margin-none--38Ak StyledProps---flex--2Jz8"
                >
                  <pre>
                    kubectl apply -f harness-delegate.yaml
                  </pre>
                  <button
                    class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-duplicate StyledProps---main--1Wws"
                      icon="duplicate"
                    >
                      <svg
                        data-icon="duplicate"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          duplicate
                        </desc>
                        <path
                          d="M15 0H5c-.55 0-1 .45-1 1v2h2V2h8v7h-1v2h2c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1zm-4 4H1c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-1 10H2V6h8v8z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </section>
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
          >
            <button
              class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Back
              </span>
            </button>
            <button
              class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Close
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <button
      class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`Delegate Step Wizard should render Delegate Setup Wizard 1`] = `
<div>
  <div
    class="exampleWizard"
  >
    <div
      class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
    >
      <div
        class="StepWizard---navBarList--2ILN"
      >
        <div
          class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            1
          </span>
          <p
            class="StyledProps---font--2ipy Text---multiple--3ScU StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            Create a New Kubernetes Connector
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            2
          </span>
          <p
            class="StyledProps---font--2ipy Text---multiple--3ScU StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            New Kubernetes Connector
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            3
          </span>
          <p
            class="StyledProps---font--2ipy Text---multiple--3ScU StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            Verify Connection
          </p>
        </div>
      </div>
      <div
        class="StepWizard---stepDetails--Uaxx"
      >
        <div
          class="Layout---vertical--3Szv StyledProps---main--1Wws StyledProps---padding-small--3f0A"
        >
          <div
            style="height: 180px;"
          />
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-large--2sHu StyledProps---padding-small--3f0A"
            style="text-transform: uppercase;"
          >
            Create a New Kubernetes Connector
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-medium--3Ish"
            style="text-transform: uppercase;"
          >
            Recommended
          </p>
          <div
            class="customGrid"
          >
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card---card--2BXa"
              data-index="0"
              tabindex="0"
            >
              <div>
                <div
                  class="Layout---vertical--3Szv Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
                >
                  <div
                    class="itemName"
                  >
                    Connect through a harness delegate running in-cluster
                  </div>
                  <div
                    class="itemInfo"
                  >
                    In this method, you would not have to provide the cluster credentials or master URL. You will be required to install a delegate onto your cluster in next step.
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card---card--2BXa"
              data-index="1"
              tabindex="0"
            >
              <div>
                <div
                  class="Layout---vertical--3Szv Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
                >
                  <div
                    class="itemName"
                  >
                    Connect through a harnesss delegate outside your cluster
                  </div>
                  <div
                    class="itemInfo"
                  >
                    In this method, a harness delegate will you the cluster master URL and credentials to connect to your cluster.
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        close
      </span>
    </button>
  </div>
</div>
`;
